# joystick-mouse

./: README.md  platformio.ini  pyproject.toml
src/: a.out  ctrl.py  main.cpp  test.cpp
